# diesel-demo

./: Cargo.toml  README.md  Secrets.toml  Shuttle.toml
src/: demo.rs  error.rs  main.rs
