[package]
authors    =["Thor Kampefner <thorck@pm.me>"]
description="""diesel-demo"""
edition    ="2021"
license    ="Apache2.0 OR MIT"
name       ="diesel-demo"
repository ="https://github.com/thor314/diesel-demo"
version    ="0.1.0"

[dependencies]
anyhow   ="1.0"
cute = "0.3.0"
tracing = "0.1"
tracing-subscriber={ version="0.3", features=["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3" 
# reqwest = "0.11.24"
thiserror="1.0"
env_logger = "0.11"
 
axum = { version = "0.7.3", features = ["macros"] }
shuttle-axum = "0.39.0"
shuttle-runtime = { version = "0.39", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
shuttle-secrets = "0.39.0"
serde_json = "1.0.113"

shuttle-diesel-async = { git = "https://github.com/aumetra/shuttle-diesel-async", branch = "aumetra/shuttle-v0.39", features = ["deadpool"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
diesel = { version = "2.1.4", features = ["postgres", "uuid", "chrono"] }
# axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
# tower-http = { version = "0.5.1", features = ["fs"] }
# shuttle-shared-db = { version = "0.39.0", features = ["postgres", "sqlx"] } 
# sqlx = { version = "0.7.3", features = ["postgres"] }


[dev-dependencies]
rstest    ="0.18"         # testing convenience proc-macros
